--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
 <script src="https://code.highcharts.com/stock/highstock.js"></script>
 <script src="https://code.highcharts.com/stock/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/stock/modules/export-data.js"></script>
-<div id='vol'></div>
+<div id='vol'></div><div id='pos'></div>
 <div id="container" style="height: 500px; min-width: 310px"></div>
 
 <script>
@@ -73,6 +73,7 @@
                 first = false;
                 fperc = jsondata.btcNow;
                 }
+                $('#pos').html('                                          ' +jsondata.pos + ' position')
                 $('#vol').html('                                          ' +jsondata.qty + ' BTC notional traded in recent memory')
                 asks= jsondata.btc; 
                 equity.push([jsondata.time, jsondata.btcNow]);
