--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
         var quoinexBids = []
         setInterval(function() {
             //chart = Highcharts.stockChart('container', options);
-            $.getJSON('http://coindexbot.duckdns.org/update?name=test', function(jsondata) {
+            $.getJSON('http://localhost:8080/update?name=test', function(jsondata) {
                 console.log(jsondata);
                 if (first == true){
                 first = false;
