--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
         var quoinexBids = []
         setInterval(function() {
             //chart = Highcharts.stockChart('container', options);
-            $.getJSON('http://localhost:8080/update?name=test', function(jsondata) {
+            $.getJSON('http://coindexbot.duckdns.org:8081/update?name=test', function(jsondata) {
                 console.log(jsondata);
                 if (first == true){
                 first = false;
@@ -98,7 +98,7 @@
                 chart.series[0].setData(asks);
                // chart = Highcharts.stockChart('container', options);
             });
-        }, 4000);
+        }, 3500);
     });
 
     var trade = [],
