--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,7 +69,7 @@
         var quoinexBids = []
         setInterval(function() {
             //chart = Highcharts.stockChart('container', options);
-            $.getJSON('http://coindexbot.duckdns.org:8081/update?name=test', function(jsondata) {
+            $.getJSON('<%- site %>:<%- port %>/update?name=test', function(jsondata) {
                 console.log(jsondata);
                 if (first == true){
                 first = false;
